[project]
name = "amplifier-module-tool-web"
version = "1.0.0"
description = "Reference Web tools (search and fetch) module for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "ddgs>=9.6.0",
    "amplifier-core",
]

[project.entry-points."amplifier.modules"]
tool-web = "amplifier_module_tool_web:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources.amplifier-core]
path = "../amplifier-core"
editable = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_tool_web",
]

[tool.hatch.metadata]
allow-direct-references = true
